--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-image: url('/images/bg.jpeg'); 
+  background-image: url('./images/bg.jpeg'); 
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
