--- a/index.css
+++ b/index.css
@@ -177,8 +177,9 @@ footer {
 
   .icerik-bolmesi {
     width: 80%;
-    border-color: red;
+    border-style: solid;
     border-width: 3px;
+    border-color: red;
   }
 }
 
