--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ nav a:hover {
   font-weight: bold;
   display: flex;
   justify-content: center;
+  text-decoration: none;
 }
 
 .kayit-ol:hover {
