--- a/kayitol.css
+++ b/kayitol.css
@@ -63,6 +63,7 @@ body {
     margin-right: 75px;
     font-size: 16px;
     font-weight: bold;
+    text-decoration: none;
   }
   
   .kayit-ol:hover {
