--- a/kayitol.css
+++ b/kayitol.css
@@ -75,6 +75,37 @@ body {
     padding: 20px;
   }
 
+  .paket-sec-butonu {
+    background-color: #e21111; /* Kırmızı veya istediğiniz renk */
+    color: #fff;
+    border: none; /* Varsayılan kenarlığı kaldır */
+    padding: 15px 30px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;  /* Yuvarlatılmış köşeler */
+    font-size: 16px;
+    margin-top: 15px;
+  }
+  
+  .paketleri-gor-butonu {
+    background-color: #e21111; /* Kırmızı veya istediğiniz renk */
+    color: #fff;
+    border: none; /* Varsayılan kenarlığı kaldır */
+    padding: 15px 30px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;  /* Yuvarlatılmış köşeler */
+    font-size: 16px;
+  }
+  
+  .paketleri-gor-butonu:hover {
+      opacity: 0.8; /* Biraz saydamlık ekle */
+  }
+  
+  .paket-sec-butonu:hover {
+      opacity: 0.8; /* Biraz saydamlık ekle */
+  }
+
   footer { 
     background-color: rgb(56, 56, 56);
     color: white;
