--- a/kayitol.css
+++ b/kayitol.css
@@ -134,6 +134,42 @@
   color: #e21111;
   font-weight: bold;
 }
+
+.modal {
+  display: none;        /* Varsayılan olarak gizli */
+  position: fixed;      /* Ekranda sabit kalın */
+  z-index: 1;           /* Diğer elementlerin üstünde */
+  left: 0;
+  top: 0;
+  width: 100%;          /* Tam ekran genişliği */
+  height: 100%;         /* Tam ekran yüksekliği */
+  overflow: auto;       /* Gerekirse kaydırma çubuğu ekle */
+  background-color: rgba(0, 0, 0, 0.5); /* Yarı saydam siyah arkaplan */
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;         /* Üst ve altta %15, yanlarda oto */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;               /* Genişlik ayarı */
+  border-radius: 10px; 
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2); 
+}
+
+.close-button {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
   
   footer {
     background-color: #ccc;
