--- a/kayitol.css
+++ b/kayitol.css
@@ -83,7 +83,7 @@ body {
 }
 
 /* Buton Tasarımı */
-.paketler-buton, odeme-bilgileri-buton {
+.paketler-buton {
   background-color: transparent;
   border: 3px solid #e21111;
   color: #e21111;
@@ -95,7 +95,24 @@ body {
   margin-bottom: 20px; /* Buton ile paketler arasına boşluk */
 }
 
-.paketler-buton:hover, odeme-bilgileri-buton:hover {
+odeme-bilgileri-buton {
+  background-color: transparent;
+  border: 3px solid #e21111;
+  color: #e21111;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 20px; /* Buton ile paketler arasına boşluk */
+}
+
+.paketler-buton:hover {
+  background-color: #e21111;
+  color: #fff;
+}
+
+.odeme-bilgileri-buton:hover {
   background-color: #e21111;
   color: #fff;
 }
