--- a/kayitol.css
+++ b/kayitol.css
@@ -177,7 +177,7 @@ main {
   cursor: pointer;
 }
 
-/* Footer */
+/* Footer Area */
 footer {
   background-color: rgb(56, 56, 56);
   color: white;
