--- a/kayitol.css
+++ b/kayitol.css
@@ -69,7 +69,7 @@ margin-right: auto;
 }
 
 .paketlerimiz {
-  margin-top: 40px; /* Adjust as needed */
+  margin-top: 40px;
   text-align: center;
 }
 
@@ -85,7 +85,7 @@ margin-right: auto;
 }
 
 .paket {
-  width: 250px; /* Adjust as needed */
+  width: 250px;
   margin: 10px;
   padding: 20px;
   border: 1px solid #ccc;
@@ -108,7 +108,7 @@ margin-right: auto;
 }
 
 .odeme-bilgileri {
-  margin-top: 40px; /* Adjust as needed */
+  margin-top: 40px;
 }
 
 .banka-detaylari {
