--- a/konferans.css
+++ b/konferans.css
@@ -69,8 +69,18 @@ body {
     margin: 20px auto;
     width: 80%;
     text-align: center;
+    position: relative;
+    padding-bottom: 56.25%;
   }
 
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
   .ekip {
     background-color: #f7f7f7;
     padding: 50px;
