--- a/konferans.css
+++ b/konferans.css
@@ -70,16 +70,21 @@ body {
     width: 80%;
     text-align: center;
     position: relative;
-    padding-bottom: 56.25%;
   }
-
-  .video-container iframe {
+  
+  .video-wrapper { 
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+  }
+  
+  .video-wrapper iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-  }
+    height: 100%; 
+  }  
   
   .ekip {
     background-color: #f7f7f7;
