--- a/paketler.css
+++ b/paketler.css
@@ -3,6 +3,59 @@ body {
   margin: 0;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #000000;
+  opacity: 85%;
+}
+
+.logo {
+  margin-left: 300px;
+  margin-right: 20px;
+}
+
+.logo img {
+  height: 60px;
+  width: auto;
+}
+
+nav {
+  display: flex;
+  margin-right: 20px;
+}
+
+nav a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+nav a:hover {
+  color: #e21111;
+}
+
+.kayit-ol {
+  background-color: transparent;
+  border: 3px solid #e21111;
+  color: #e21111;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.kayit-ol:hover {
+  background-color: #e21111;
+  color: #fff;
+}
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
@@ -74,4 +127,150 @@ body {
   .paketlerimiz h2 {
     font-size: 28px;
   }
+}
+
+footer {
+  background-color: #ccc;
+  padding: 10px;
+  text-align: center;
+}
+
+footer {
+  background-color: rgb(56, 56, 56);
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.sosyal-medya {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.sosyal-medya a {
+  margin: 0 10px;
+  color: white;
+  font-size: 24px;
+  transition: 0.3s;
+}
+
+.sosyal-medya a:hover {
+  color: #e21111;
+}
+
+.telif-hakkı {
+  margin: 0;
+}
+
+@media (max-width: 900px) { 
+  .logo {
+      margin-left: 20px; 
+  }
+
+  nav a {
+      margin-right: 10px; 
+  }
+
+  .kayit-ol {
+    margin-right: 20px;
+    font-size: 14px; 
+  }  
+}
+
+@media (max-width: 600px) {
+  header {
+      flex-direction: column; 
+      align-items: flex-start;
+  }
+
+  .logo {
+      margin-left: 20px; 
+      margin-bottom: 15px; 
+  }
+
+  nav a {
+      margin-bottom: 10px; 
+  }
+
+  .kayit-ol {
+    margin-right: 0;
+    width: 100%;
+  }
+
+  .form iframe {
+    width: 100%; 
+} 
+} 
+
+@media (max-width: 900px) {
+.logo {
+  margin-left: 20px;
+}
+
+nav a {
+  margin-right: 10px;
+}
+
+.kayit-ol {
+  margin-right: 20px;
+  font-size: 14px; 
+}   
+}
+
+@media (max-width: 600px) {
+header {
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo {
+  margin-left: 20px; 
+  margin-bottom: 15px;
+}
+
+nav a {
+  margin-bottom: 10px; 
+}
+
+.kayit-ol {
+  margin-right: 0;
+  width: 100%;
+}
+
+.icerik-bolmesi {
+  width: 80%; 
+}
+} 
+
+@media (min-width: 768px) {
+.logo {
+  margin-left: 200px;
+}
+
+nav a {
+  font-size: 20px; 
+}
+}
+
+@media (max-width: 767px) {
+header {
+  flex-direction: column; 
+  align-items: center;
+}
+
+.logo {
+  margin-left: 20px;
+}
+
+nav {
+  margin-top: 10px; 
+}
+
+.kayit-ol {
+  margin-right: 75px;
+  align-items: center;
+  padding: 10px 0;
+  margin-left: 75px;
+}
 }
